fix(ui); align course header and content on all screen sizes

--- a/apps/client/src/app/course/components/course/course.component.scss
+++ b/apps/client/src/app/course/components/course/course.component.scss
@@ -1,13 +1,13 @@
 .course-header {
 	background-color: var(--color-header);
-	padding-left: var(--margin-content);
-	padding-right: var(--margin-content);
 	position: sticky;
 	top: 0;
 	z-index: 2;
 }
 
 .course-header-inner {
+	padding-left: var(--margin-content);
+	padding-right: var(--margin-content);
 	margin-left: auto;
 	margin-right: auto;
 	max-width: var(--max-width);
@@ -17,6 +17,9 @@
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 4px;
+	width: 100%;
+	padding-left: var(--margin-content);
+	padding-right: var(--margin-content);
 	max-width: var(--max-width);
 }
 
